...
    android:paddingLeft="16dp"
    android:paddingRight="1dp"
    android:paddingTop="16dp"
    tools:context=".MainActivity"
    android:background="#2B2929"
    android:gravity="center_horizontal"
    android:id="@+id/home">

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="379dp"
        android:layout_height="51dp"
        android:orientation="horizontal"
...
            android:layout_gravity="center"
            android:background="#2B2929"
            android:text="Friends"
            android:textColor="#fff" />

        <Button
            android:id="@+id/Profile"
            android:layout_width="64dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="40dp"
            android:background="#2B2929"
            android:text="Profile"
...
