<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:paddingBottom="16dp"
android:paddingLeft="16dp"
android:paddingRight="1dp"
android:paddingTop="16dp"
tools:context=".MainActivity"
android:background="#2B2929"
android:gravity="center_horizontal"
android:id="@+id/profilePage">

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="379dp"
        android:layout_height="51dp"
        android:orientation="horizontal"
        android:paddingRight="16dp">


        <Button
            android:id="@+id/HomeButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="left"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:background="#2B2929"
            android:text="Home"
            android:textColor="#fff" />


        <Button
            android:id="@+id/search"
            android:layout_width="55dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="35dp"
            android:background="#2B2929"
            android:text="Search"
            android:textColor="#fff" />

        <Button
            android:id="@+id/Friends"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="#2B2929"
            android:text="Friends"
            android:textColor="#fff" />

        <Button
            android:id="@+id/Profile"
            android:layout_width="64dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="40dp"
            android:background="#2B2929"
            android:text="Profile"
            android:textColor="#fff" />
    </LinearLayout>
<Space
    android:layout_width="match_parent"
    android:layout_height="10dp"
    android:minHeight="40dp" />
    <LinearLayout
        android:id="@+id/Profilepage"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal" >

            <ImageView
            android:id="@+id/profilePic"
                android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:padding="2dip"

                tools:src="@tools:sample/avatars"
                android:orientation="horizontal">

            </ImageView>
        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/username"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Username"
                android:textAllCaps="true"

                android:textAlignment="center"

                android:textSize="18sp"
                android:fontFamily="@font/notosansextrabold"
                android:textColor="#fff"/>
            <TextView
                android:id="@+id/usernameText"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Firstname"

                android:textAlignment="center"

                android:textSize="15sp"
                android:fontFamily="@font/notosansextrabold"
                android:textColor="#fff"/>

            <TextView
                android:id="@+id/firstnameText"
                android:layout_width="99dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosansextrabold"
                android:text="Lastname"

                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:orientation="vertical">
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />
        <Button
            android:id="@+id/editUsername"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:text="Edit Profile"
            android:textColor="#fff"
            android:background="@drawable/buttonbackground"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />
            <Button
            android:id="@+id/logout"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:text="Log Out"
            android:textColor="#fff"
            android:background="@drawable/buttonbackground"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:orientation="vertical">
        <Button
            android:id="@+id/notifications"
            android:layout_width="80dp"
            android:layout_height="25dp"
            android:textAlignment="center"
            android:text="Alert"
            android:textColor="#fff"
            android:background="@drawable/buttonbackground"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />


            <Button
            android:id="@+id/adminButton"
            android:layout_width="80dp"
            android:layout_height="25dp"
                android:visibility="invisible"
            android:textAlignment="center"
            android:text="Admin "
            android:textColor="#fff"
            android:background="@drawable/buttonbackground"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />
            <Button
                android:id="@+id/modButton"
                android:layout_width="80dp"
                android:layout_height="25dp"
                android:visibility="invisible"
                android:textAlignment="center"
                android:text="Mod "
                android:textColor="#fff"
                android:background="@drawable/buttonbackground"/>
        </LinearLayout>
    </LinearLayout>




<TextView
    android:id="@+id/textView2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="My Movies"
    android:textSize="20sp"
    android:fontFamily="@font/notosansextrabold"
    android:textColor="#fff"
    />
<View
    android:layout_width="200dp"
    android:layout_height="1dp"
    android:background="#ffffff"
    android:layout_gravity="left"/>

<HorizontalScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/horizontalScrollView"
    android:layout_above="@+id/linearLayout5"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true" >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/image_container4"
        android:orientation="horizontal">

    </LinearLayout>
</HorizontalScrollView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp" />
    <TextView
        android:id="@+id/listLists"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="My Lists"
        android:textSize="20sp"
        android:fontFamily="@font/notosansextrabold"
        android:textColor="#fff"
        />
    <View
        android:layout_width="200dp"
        android:layout_height="1dp"
        android:background="#ffffff"
        android:layout_gravity="left"/>
    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontalScrollViewList"
        android:layout_above="@+id/linearLayout6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/list_Container"
            android:orientation="horizontal">

        </LinearLayout>
    </HorizontalScrollView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <Button
        android:id="@+id/createList"
        android:layout_width="200dp"
        android:layout_height="66dp"
        android:background="@drawable/buttonbackground"
        android:text="Create a new list"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="20sp" />
</LinearLayout>