<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="1dp"
    android:paddingTop="16dp"
    tools:context=".MainActivity"
    android:background="#2B2929"
    android:gravity="center_horizontal">

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="379dp"
        android:layout_height="51dp"
        android:orientation="horizontal"
        android:paddingRight="16dp">


        <Button
            android:id="@+id/HomeButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="left"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:background="#2B2929"
            android:text="Home"
            android:textColor="#fff" />


        <Button
            android:id="@+id/search"
            android:layout_width="55dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="35dp"
            android:background="#2B2929"
            android:text="Search"
            android:textColor="#fff" />

        <Button
            android:id="@+id/Friends"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="#2B2929"
            android:text="Friends"
            android:textColor="#fff" />

        <Button
            android:id="@+id/Profile"
            android:layout_width="64dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="40dp"
            android:background="#2B2929"
            android:text="Profile"
            android:textColor="#fff" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="New Announcement"
        android:textSize="15sp"
        android:fontFamily="@font/notosansextrabold"
        android:textColor="#fff"/>




<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="45dp">
    <EditText
        android:id="@+id/titleText"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:background="@drawable/roundtextedit"
        android:elevation="10dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:fontFamily="@font/notosansregular"
        android:hint="Title"
        android:inputType="textPersonName"
        android:padding="5dip"
        android:textColorHint="#000">

    </EditText>
    <Button
        android:id="@+id/postButton"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:background="@drawable/buttonbackground"
        android:elevation="10dp"
        android:ems="10"
        android:fontFamily="@font/notosansregular"
        android:hint="Post"
        android:inputType="textPersonName"
        android:padding="5dip"
        android:textColorHint="#000">

    </Button>
</LinearLayout>
    <EditText
        android:id="@+id/bodyText"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/roundtextedit"
        android:elevation="10dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:fontFamily="@font/notosansregular"
        android:hint="Text"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:textSize="20dp"
        android:padding="5dip"
        android:textColorHint="#000">
    </EditText>

</LinearLayout>