<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".MainActivity"
    android:background="#2B2929"
    android:gravity="center_horizontal">


    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="379dp"
        android:layout_height="51dp"
        android:orientation="horizontal"
        android:paddingRight="16dp">


        <Button
            android:id="@+id/HomeButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="left"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:background="#2B2929"
            android:text="Home"
            android:textColor="#fff" />


        <Button
            android:id="@+id/search"
            android:layout_width="55dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="35dp"
            android:background="#2B2929"
            android:text="Search"
            android:textColor="#fff" />

        <Button
            android:id="@+id/Friends"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="#2B2929"
            android:text="Friends"
            android:textColor="#fff" />

        <Button
            android:id="@+id/Profile"
            android:layout_width="64dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="40dp"
            android:background="#2B2929"
            android:text="Profile"
            android:textColor="#fff" />
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:minHeight="40dp" />
        <LinearLayout
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
            android:layout_gravity="center"
        android:orientation="horizontal" >

            <EditText
                android:id="@+id/editSearchBar"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:background="@drawable/roundtextedit"
                android:elevation="10dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:fontFamily="@font/notosansregular"
                android:hint="Search"
                android:inputType="textPersonName"
                android:padding="5dip"
                android:textColorHint="#000"

                android:textSize="22sp" />

            <Button
                android:id="@+id/searchEnter"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:elevation="10dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/roundtextedit"
                android:ems="10"
                android:hint="Enter" />
        </LinearLayout>








    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontalScrollView"
        android:layout_above="@+id/linearLayout3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" >
        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="500dp"
            android:id="@+id/image_container1"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>


</LinearLayout>